--- a/app/views/logins/_environment_banner.html.erb
+++ b/app/views/logins/_environment_banner.html.erb
@@ -1,7 +1,6 @@
 <% if Rails.env.development? %>
   <div class="!shadow-none shrink-0 p-4 my-7 border border-1 border-green card flex flex-row justify-between items-center">
-    <span>You're in <strong class="text-green" style="filter: brightness(.8)">development</strong></span>
-    <%= pop_icon_to "email", letter_opener_web_path, class: "m-0 tooltipped tooltipped--w", "aria-label": "View email outbox", target: "_blank" %>
+    <span>You're in <strong class="text-green" style="filter: brightness(.8)">development</strong>, now with SMTP (check your email for code)!</span>
   </div>
 <% elsif Rails.env.staging? %>
   <div class="!shadow-none shrink-0 p-4 my-7 border border-1 border-purple card">
