--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -87,7 +87,7 @@
         <span>
           You aren't a part of an organization yet, looking to start one?
         </span>
-        <%= link_to apply_form_url(utm_campaign: "hcb-new-event", utm_content: "first-time"), class: "btn bg-success mt2" do %>
+        <%= link_to "https://hackclub.slack.com/archives/C08KC1619ME/p1742546589352839", class: "btn bg-success mt2" do %>
           <%= inline_icon "plus" %>
           New organization
         <% end %>
